@@ -6,19 +6,17 @@ import com.testtask.TaskManagementSystem.entity.Comment;
 import com.testtask.TaskManagementSystem.entity.Task;
 import com.testtask.TaskManagementSystem.exceptions.CommentDoesNotBelongToUserException;
 import com.testtask.TaskManagementSystem.exceptions.CommentNotFoundException;
-import com.testtask.TaskManagementSystem.exceptions.TaskNotFoundException;
-import com.testtask.TaskManagementSystem.exceptions.UserNotFoundException;
+import com.testtask.TaskManagementSystem.mapper.CommentMapper;
 import com.testtask.TaskManagementSystem.repository.CommentRepository;
-import com.testtask.TaskManagementSystem.repository.TaskRepository;
-import com.testtask.TaskManagementSystem.repository.UsersRepository;
 import com.testtask.TaskManagementSystem.service.CommentService;
+import com.testtask.TaskManagementSystem.service.TaskService;
+import com.testtask.TaskManagementSystem.service.UserService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Objects;
 import java.util.stream.Collectors;
 
 /**
@@ -29,45 +27,35 @@ import java.util.stream.Collectors;
 public class CommentServiceImpl implements CommentService {
 
     private final CommentRepository commentRepository;
-    private final TaskRepository taskRepository;
-    private final UsersRepository usersRepository;
+    private final TaskService taskService;
+    private final UserService userService;
+    private final CommentMapper commentMapper;
 
 
     /**
      * Метод для проверки прав пользователя для изменения комментария
      */
     private Comment checkAuthor(String username, Integer idComment) {
-        Comment comment = commentRepository.findById(idComment).orElseThrow(() -> new CommentNotFoundException("комментарий не найден"));
-        if (!comment.getAuthor().equals(usersRepository.findByUsername(username).orElseThrow(() -> new UserNotFoundException("пользователь не найден")))) {
+        Comment comment = findComment(idComment);
+        if (!comment.getAuthor().equals(userService.findUserByUserName(username))) {
             throw new CommentDoesNotBelongToUserException("комментарий принадежит другому пользователю");
         }
         return comment;
     }
 
-    /**
-     * Метод для проверки наличия задачи в базе данных с переданным id
-     */
-    private boolean checkTaskIsExist(Integer id) {
-        Task task = taskRepository.findById(id).orElse(null);
-        return !Objects.isNull(task);
-    }
 
     /**
      * Класс создания комментария
      */
     @Override
     public Integer createComment(String username, Integer idTask, CreateOrUpdateComment newComment) {
-        if (checkTaskIsExist(idTask)) {
-            Comment comment = new Comment();
-            comment.setCreatedAt(LocalDateTime.now());
-            comment.setAuthor(usersRepository.findByUsername(username).orElseThrow(() -> new UserNotFoundException("пользователь с таким логином не найден")));
-            comment.setTask(taskRepository.findById(idTask).orElseThrow(() -> new TaskNotFoundException("задача не найдена")));
-            comment.setText(newComment.getText());
-            return commentRepository.save(comment).getId();
-        } else {
-            throw new TaskNotFoundException("задача не найдена");
-        }
-
+        Task task = taskService.getTask(idTask);
+        Comment comment = new Comment();
+        comment.setCreatedAt(LocalDateTime.now());
+        comment.setAuthor(userService.findUserByUserName(username));
+        comment.setTask(task);
+        comment.setText(newComment.getText());
+        return commentRepository.save(comment).getId();
     }
 
     /**
@@ -78,15 +66,12 @@ public class CommentServiceImpl implements CommentService {
                                     Integer idComment,
                                     CreateOrUpdateComment changeComment,
                                     Integer idTask) {
-        if (checkTaskIsExist(idTask)) {
-            Comment comment = checkAuthor(username, idComment);
-            comment.setCreatedAt(LocalDateTime.now());
-            comment.setText(changeComment.getText());
-            return CommentDTO.fromComment(commentRepository.save(comment));
-        } else {
-            throw new TaskNotFoundException("задача не найдена");
-        }
-
+        Task task = taskService.getTask(idTask);
+        Comment comment = checkAuthor(username, idComment);
+        comment.setCreatedAt(LocalDateTime.now());
+        comment.setText(changeComment.getText());
+//        return CommentDTO.fromComment(commentRepository.save(comment));
+        return commentMapper.toDTO(commentRepository.save(comment));
     }
 
     /**
@@ -94,11 +79,8 @@ public class CommentServiceImpl implements CommentService {
      */
     @Override
     public void deleteComment(String username, Integer idComment, Integer idTask) {
-        if (checkTaskIsExist(idTask)) {
-            commentRepository.delete(checkAuthor(username, idComment));
-        } else {
-            throw new TaskNotFoundException("задача не найдена");
-        }
+        Task task = taskService.getTask(idTask);
+        commentRepository.delete(checkAuthor(username, idComment));
     }
 
     /**
@@ -106,11 +88,11 @@ public class CommentServiceImpl implements CommentService {
      */
     @Override
     public CommentDTO getComment(Integer idComment, Integer idTask) {
-        if (checkTaskIsExist(idTask)) {
-            return CommentDTO.fromComment(commentRepository.findById(idComment).orElseThrow(() -> new CommentNotFoundException("комментарий не найден")));
-        } else {
-            throw new TaskNotFoundException("задача не найдена");
-        }
+        Task task = taskService.getTask(idTask);
+//        return CommentDTO.fromComment(commentRepository.
+//                findById(idComment).orElseThrow(() ->
+//                        new CommentNotFoundException("комментарий не найден")));
+        return commentMapper.toDTO(findComment(idComment));
     }
 
     /**
@@ -118,12 +100,10 @@ public class CommentServiceImpl implements CommentService {
      */
     @Override
     public List<CommentDTO> getAllCommentsForTask(Integer idTask, Integer page) {
-        if (checkTaskIsExist(idTask)) {
-            List<Comment> commentList = commentRepository.findAllByTask(idTask, PageRequest.of(page, 10)).stream().toList();
-            return commentList.stream().map(CommentDTO::fromComment).collect(Collectors.toList());
-        } else {
-            throw new TaskNotFoundException("задача не найдена");
-        }
+        Task task = taskService.getTask(idTask);
+        List<Comment> commentList = commentRepository.findByTask(task, PageRequest.of(page, 10)).stream().collect(Collectors.toList());
+//        return commentList.stream().map(CommentDTO::fromComment).collect(Collectors.toList());
+        return commentMapper.toCommentDTOList(commentList);
     }
 
     /**
@@ -131,10 +111,18 @@ public class CommentServiceImpl implements CommentService {
      */
     @Override
     public List<CommentDTO> getAllCommentsForAuthor(String username, Integer page) {
-        List<Comment> commentList = commentRepository.findAllByAuthor(
-                        usersRepository.findByUsername(username).orElseThrow(() -> new UserNotFoundException("пользователь не найден")).getId(),
+        List<Comment> commentList = commentRepository.findByAuthor(
+                        userService.findUserByUserName(username),
                         PageRequest.of(page, 10))
-                .stream().toList();
-        return commentList.stream().map(CommentDTO::fromComment).collect(Collectors.toList());
+                .stream().collect(Collectors.toList());
+//        return commentList.stream().map(CommentDTO::fromComment).collect(Collectors.toList());
+        return commentMapper.toCommentDTOList(commentList);
+    }
+
+    @Override
+    public Comment findComment(Integer id) {
+        return commentRepository.
+                findById(id).orElseThrow(() ->
+                        new CommentNotFoundException("комментарий не найден"));
     }
 }
